Working weight ajustments on assessments

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,10 @@
 .vscode/
 .apt_generated_tests/
 target/
-
+workspace.code-workspace
+.settings/org.eclipse.jdt.apt.core.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.m2e.core.prefs
 
 # CMake
 cmake-build-*/
