--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
             <artifactId>javalin</artifactId>
             <version>3.13.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin-bundle</artifactId>
+            <version>3.13.9</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
