--- a/pom.xml
+++ b/pom.xml
@@ -135,11 +135,11 @@
             <version>3.13.9</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-<!--      <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.14.1</version>
-<!--      </dependency>
+<!--      <dependency> -->
+<!--          <groupId>org.apache.logging.log4j</groupId> -->
+<!--          <artifactId>log4j-core</artifactId> -->
+<!--          <version>2.14.1</version> -->
+<!--      </dependency> -->
 <!--        <dependency>-->
 <!--            <groupId>org.slf4j</groupId>-->
 <!--            <artifactId>slf4j-simple</artifactId>-->
