--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
         </dependency>
 
 
+
+
+
         <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
         <!-- <dependency>
             <groupId>net.bytebuddy</groupId>
@@ -170,7 +173,28 @@
                 </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+            </plugin>
+
         </plugins>
+
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M4</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
