final javadoc stuff

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,32 @@ Pricing
 API
 Training
 Blog
+/resources/app/
+/resources/controllers/
+/resources/dao/
+/resources/daoTests/
+/resources/dtos/
+/resources/exceptions/
+/resources/index-files/
+/resources/models/
+/resources/resources/
+/resources/script-dir/
+/resources/services/
+/resources/util/
+/resources/allclasses-index.html
+/resources/allpackages-index.html
+/resources/element-list
+/resources/help-doc.html
+/resources/index.html
+/resources/jquery-ui.overrides.css
+/resources/member-search-index.js
+/resources/module-search-index.js
+/resources/overview-summary.html
+/resources/overview-tree.html
+/resources/package-search-index.js
+/resources/script.js
+/resources/search.js
+/resources/serialized-form.html
+/resources/stylesheet.css
+/resources/tag-search-index.js
+/resources/type-search-index.js
